<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_constraints"
    android:background="@color/primaryDark"
    tools:context=".ui.fragments.operation.OperationsFragment">
<ImageView
    android:id="@+id/back"
    android:layout_width="@dimen/_23sdp"
    android:layout_height="@dimen/_27sdp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:src="@drawable/back"
    android:layout_marginStart="@dimen/_6sdp"
    android:layout_marginTop="@dimen/_13sdp"
    android:padding="@dimen/_3sdp"
    android:clickable="true"
    android:focusable="true"
    android:contentDescription="@string/back" />

    <ImageView
        android:id="@+id/done"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/done_note"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:padding="@dimen/_3sdp"
        android:contentDescription="@string/done_note"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true" />
    <ImageView
        android:id="@+id/pin"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintEnd_toStartOf="@id/done"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/pin_note"
        android:layout_marginEnd="@dimen/_7sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:padding="@dimen/_3sdp"
        android:clickable="true"
        android:focusable="true"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/pin_note" />

    <ImageView
        android:id="@+id/lock"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintEnd_toStartOf="@id/pin"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/lock_note"
        android:layout_marginEnd="@dimen/_7sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:padding="@dimen/_3sdp"
        android:shadowColor="@color/lightGreyDark"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/lock_note" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/choiceColor_rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lock"
        tools:itemCount="10"
        tools:listitem="@layout/color_rv_item" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:autofillHints=""
        android:fontFamily="@font/bree_serif"
        android:hint="@string/title"
        android:layout_marginStart="@dimen/_7sdp"
        android:inputType="text"
        android:text=""
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintTop_toBottomOf="@id/choiceColor_rv"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="19dp" />

    <EditText
        android:id="@+id/notes_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:autofillHints=""
        android:fontFamily="@font/calligraffitti"
        android:hint="Enter Node"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:ignore="LabelFor"
        android:layout_marginStart="@dimen/_10sdp"
        tools:layout_editor_absoluteX="13dp" />


        <ImageView
            android:id="@+id/image_select"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            app:layout_constraintTop_toBottomOf="@id/notes_description"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/dropimage"
            android:visibility="gone"
            android:contentDescription="Drop_Your_Image" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_img_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Actions"
        app:icon="@drawable/ic_add"
        android:backgroundTint="@color/blueDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_record_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:fabSize="normal"
        android:backgroundTint="@color/blueDark"
        app:layout_constraintBottom_toTopOf="@+id/add_img_record"
        app:layout_constraintEnd_toEndOf="@+id/add_img_record" />
<!--        app:srcCompat="@drawable/ic_add_alarm_black_24dp" -->



    <!--Action name text for the add alarm button-->
    <!--Make sure that you are constraining this
        Text to the add Alarm FAB button-->
    <TextView
        android:id="@+id/add_record_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Add Record"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/add_record_fab"
        app:layout_constraintEnd_toStartOf="@+id/add_record_fab"
        app:layout_constraintTop_toTopOf="@+id/add_record_fab" />

    <!--Floating action button for add person-->
    <!--Make sure that you are constraining this button
        to the add Alarm FAB button-->
    <!--Make sure to add backgroundTint attribute to match
         the entire application color-->
    <!--because after changing the base application theme
         the color of the FAB is set Blue as default-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_image_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/blueDark"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/add_record_fab"
        app:layout_constraintEnd_toEndOf="@+id/add_record_fab"
        app:layout_constraintStart_toStartOf="@+id/add_record_fab"
       />
<!--    app:srcCompat="@drawable/ic_person_add_black_24dp"-->
    <!--Action name text for the add person button-->
    <!--Make sure that you are constraining this Text
         to the add Person FAB button-->
    <TextView
        android:id="@+id/add_image_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Add Person"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/add_image_fab"
        app:layout_constraintEnd_toStartOf="@+id/add_image_fab"
        app:layout_constraintTop_toTopOf="@+id/add_image_fab" />

</androidx.constraintlayout.widget.ConstraintLayout>